[tool.poetry]
name = "mkpp"
version = "1.0.0"
description = "Extremely simple tool for creating Python packages."
authors = ["jieggii"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jieggii/mkpp"
repository = "https://github.com/jieggii/mkpp"
keywords = [
	"tool",
	"module",
	"automation",
	"lazy"
]

[tool.poetry_urls]
"Bug Tracker" = "https://github.com/jieggii/mkpp/issues"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
isort = "^5.1.1"
black = "^19.10b0"
flake8 = "^3.8.3"

[tool.poetry.scripts]
mkpp = 'mkpp.__main__:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
