[project]
name = "mkpp"
version = "1.0.3"
description = "Simple tool for creating Python packages. For lazies."
authors = [
    {name = "jieggii", email = "jieggii.contact@gmail.com"},
]
dependencies = []
requires-python = ">=3.6"
license = {text = "MIT"}
readme = "README.md"
repository = "https://github.com/jieggii/mkpp"
keywords = [
    "packages"
]

[project.urls]
"Homepage" = "https://github.com/jieggii/mkpp"
"Bug tracker" = "https://github.com/jieggii/mkpp/issues"

[project.scripts]
mkpp = 'mkpp.__main__:main'

[tool.pdm.dev-dependencies]
dev = [
    "black>=20.8b1",
    "isort>=5.8.0",
    "flake8>=4.0.1",
]

[tool.black]
line-length = 99
target-version = ['py36']

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
